added our structure

--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
     <title>My portfolio</title>
 </head>
 <body>
-    
-    <header></header>
 
-    <main></main>
+    <header>
+        <div id="brand">
+            <img src="images/logo.png" alt="brand logo">
+        </div>
+        <nav id="navbar">
+            <ul>
+
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#skills">Skills</a></li>
+
+            </ul>
+        </nav>
+        </header>
+
+        <main>
+     <!--home section-->
+    <section id="home"></section>
+
+    <!--about section-->
+    <section id="about"></section>
+
+    <!--services section-->
+    <section id="services"></section>
+
+    <!--contact section-->
+    <section id="contact"></section>
+
+    <!--portfolio section-->
+    <section id="portfolio"></section>
+
+    <!--skills section-->
+    <section id="skills"></section>
+
+
+        </main>
 
     <footer></footer>
 
