added home and services html content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
+    <script src="https://kit.fontawesome.com/d018775ffa.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -27,13 +28,86 @@
 
         <main>
      <!--home section-->
-    <section id="home"></section>
+    <section id="home">
+
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-pinterest"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-behance"></i>
+
+        <h2>I am Johnathan Doe</h2>
+        <p>i'm Jonathan, professional web developer with long time experience in this field​</p>
+<button href="#portfolio">My portfolio</button>
+<i class="fa-brands fa-youtube"></i> <br> <br>
+<img src="images/man-01.png" alt="picture of Johnathan doe">
+
+<!--<form action="" method="">
+    <input type="text" placeholder="firstname" id="firstname" name="firstname">
+    <br> <br>
+    <input type="text" placeholder="lastname" id="lastname" name="lastname">
+    <br> <br>
+    <input type="email" placeholder="email" id="email" name="email">
+    <br> <br>
+    <input type="tel" placeholder="phonenumber" id="phonenumber" name="phonenumber">
+    <br> <br>
+    <input type="submit" value="submit">
+
+</form>!---->
+
+    </section>
+<!--<table border="1">
+    <tr>
+        <th>course code</th>
+        <th>course title </th>
+        <th>course unit</th>
+        <th>grade point</th>
+
+    </tr>
+    <tr>
+        <td>csc 201</td>
+        <td>introduction to computer science</td>
+    </tr>
+</table>--->
+
+    
 
     <!--about section-->
     <section id="about"></section>
 
     <!--services section-->
-    <section id="services"></section>
+    <section id="services">
+<p>SERVICES</p>
+<h2>My Services</h2>
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
+<i class="fa-brands fa-github"></i>
+<h2>Web Development</h2>
+<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+
+<i class="fa-solid fa-cube"></i>
+<h2>Web Design</h2>
+<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+
+<i class="fa-solid fa-video"></i>
+<h2>Video Editing</h2>
+<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+
+<i class="fa-solid fa-camera"></i>
+<h2>Photography</h2>
+<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+
+<i class="fa-brands fa-apple"></i>
+<h2>App developing</h2>
+<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+
+<i class="fa-solid fa-y"></i>
+<h2>SEO expert</h2>
+<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+
+
+
+
+    </section>
 
     <!--contact section-->
     <section id="contact"></section>
