made the icons on the home page to each be nested in individual divs

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <main>
      <!--home section-->
     <section id="home">
-
-        <i class="fa-brands fa-facebook-f"></i>
-        <i class="fa-brands fa-twitter"></i>
-        <i class="fa-brands fa-pinterest"></i>
-        <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-behance"></i>
-
+<div class="icons">
+        <div class="fb"><i class="fa-brands fa-facebook-f"></i></div>
+        <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
+        <div class="pinterest"><i class="fa-brands fa-pinterest"></i></div>
+        <div class="insta"><i class="fa-brands fa-instagram"></i></div>
+        <div class="behnace"><i class="fa-brands fa-behance"></i></div>
+</div>
         <h2>I am Johnathan Doe</h2>
         <p>i'm Jonathan, professional web developer with long time experience in this field​</p>
 <button href="#portfolio">My portfolio</button>
