added the navigation bar and header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
     <script src="https://kit.fontawesome.com/d018775ffa.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
@@ -15,12 +16,12 @@
         <nav id="navbar">
             <ul>
 
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#skills">Skills</a></li>
+            <li class="navitem"><a href="#home">Home</a></li>
+            <li class="navitem"><a href="#about">About</a></li>
+            <li class="navitem"><a href="#services">Services</a></li>
+            <li class="navitem"><a href="#contact">Contact</a></li>
+            <li class="navitem"><a href="#portfolio">Portfolio</a></li>
+            <li class="navitem"><a href="#skills">Skills</a></li>
 
             </ul>
         </nav>
