--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
     <script src="https://kit.fontawesome.com/d018775ffa.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -30,51 +35,26 @@
         <main>
      <!--home section-->
     <section id="home">
-<div class="icons">
-        <div class="fb"><i class="fa-brands fa-facebook-f"></i></div>
-        <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
-        <div class="pinterest"><i class="fa-brands fa-pinterest"></i></div>
-        <div class="insta"><i class="fa-brands fa-instagram"></i></div>
-        <div class="behnace"><i class="fa-brands fa-behance"></i></div>
+        <div class="leftcon" >
+<div class="iconscon" id="horizontal">
+    <div class="icon"><i class="fa-brands fa-twitter"></i></div>
+    <div class="icon"><i class="fa-brands fa-facebook-f"></i></div>
+    <div class="icon"><i class="fa-brands fa-pinterest"></i></div>
+    <div class="icon"><i class="fa-brands fa-instagram"></i></div>
+    <div class="icon"><i class="fa-brands fa-behance"></i></div>
 </div>
-        <h2>I am Johnathan Doe</h2>
-        <p>i'm Jonathan, professional web developer with long time experience in this field​</p>
+        <h2 class="sectiontitle" id="nameintro">I am Johnathan Doe</h2>
+         <p>I'm Jonathan, professional web developer with long time experience in this field​</p>
 <button href="#portfolio">My portfolio</button>
-<i class="fa-brands fa-youtube"></i> <br> <br>
+<!--<i class="fa-brands fa-youtube"></i> <br> <br>--->
+</div>
+
+<div class="rightcon" z>
 <img src="images/man-01.png" alt="picture of Johnathan doe">
-
-<!--<form action="" method="">
-    <input type="text" placeholder="firstname" id="firstname" name="firstname">
-    <br> <br>
-    <input type="text" placeholder="lastname" id="lastname" name="lastname">
-    <br> <br>
-    <input type="email" placeholder="email" id="email" name="email">
-    <br> <br>
-    <input type="tel" placeholder="phonenumber" id="phonenumber" name="phonenumber">
-    <br> <br>
-    <input type="submit" value="submit">
-
-</form>!---->
+</div>
 
     </section>
-<!--<table border="1">
-    <tr>
-        <th>course code</th>
-        <th>course title </th>
-        <th>course unit</th>
-        <th>grade point</th>
-
-    </tr>
-    <tr>
-        <td>csc 201</td>
-        <td>introduction to computer science</td>
-    </tr>
-</table>--->
-
-    
-
-    <!--about section-->
-    <section id="about"></section>
+   
 
     <!--services section-->
     <section id="services">
@@ -105,11 +85,10 @@
 <h2>SEO expert</h2>
 <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
 
-
-
-
     </section>
 
+    <!--about section-->
+    <section id="about"></section>
     <!--contact section-->
     <section id="contact"></section>
 
