more on styling the home section

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
     <div class="icon"><i class="fa-brands fa-behance"></i></div>
 </div>
         <h2 class="sectiontitle" id="nameintro">I am Johnathan Doe</h2>
-         <p>I'm Jonathan, professional web developer with long time experience in this field​</p>
-<button href="#portfolio">My portfolio</button>
+         <p>I'm Jonathan, professional web developer with <br>long time experience in this field​</p>
+<button href="#portfolio"><span>My portfolio</span></button>
+<button href="zz" id="yticon"><span><i class="fa fa-play" aria-hidden="true"></i></span></button>
+
 <!--<i class="fa-brands fa-youtube"></i> <br> <br>--->
 </div>
 
