started the service section styling

--- a/index.html
+++ b/index.html
@@ -60,33 +60,51 @@
 
     <!--services section-->
     <section id="services">
-<p>SERVICES</p>
-<h2>My Services</h2>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
-<i class="fa-brands fa-github"></i>
-<h2>Web Development</h2>
-<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+    <div class="servicecon">
+<p id="smallsectitle">SERVICES</p>
+<h2 class="sectiontitle">My Services</h2>
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting<br> industry. Lorem Ipsum standard dummy text.</p>
+<hr>
+</div>
 
-<i class="fa-solid fa-cube"></i>
-<h2>Web Design</h2>
-<p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+<div class="cardscon">
+    <div class="cardgit" id="card">
+       <i class="fa-brands fa-github"id="cardicons"></i>
+     <h2>Web Development</h2>
+     <p>Lorem Ipsum is simply dummy text of the printing typesetting industry.simply dummy</p>
+     </div>
 
-<i class="fa-solid fa-video"></i>
+    <div class="cardwebdesign"id="card">
+   <i class="fa-solid fa-cube"id="cardicons"></i>
+   <h2>Web Design</h2>
+   <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+    </div>
+
+<div class="cardvidedit"id="card">
+<i class="fa-solid fa-video"id="cardicons"></i>
 <h2>Video Editing</h2>
 <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+</div>
 
-<i class="fa-solid fa-camera"></i>
+<div class="cardphoto"id="card">
+<i class="fa-solid fa-camera"id="cardicons"></i>
 <h2>Photography</h2>
 <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+</div>
 
-<i class="fa-brands fa-apple"></i>
+<div class="cardappdev"id="card">
+<i class="fa-brands fa-apple"id="cardicons"></i>
 <h2>App developing</h2>
 <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+</div>
 
-<i class="fa-solid fa-y"></i>
+<div class="cardseo"id="card">
+<i class="fa-solid fa-y"id="cardicons"></i>
 <h2>SEO expert</h2>
 <p>Lorem Ipsum is simply dummy text of the printing typesetting industry. simply dummy</p>
+  </div>
 
+</div>
     </section>
 
     <!--about section-->
